# reachmap

./: .gitignore  README.md
config/: asn-name-overrides.json  collectors.json  geolocation-overrides.json
config/schemas/: path-family.schema.json  prefixes.schema.json  viewpoint.schema.json
data/processed/countries/CU/: asn-catalog.json
docs/: bgp-event-candidates.md  collector-consensus.md  collector-snapshot-set.md  data-pipeline.md  data-plane-overlays.md  deployment.md  geolocation.md  product.md  red-weather-validation.md  visual-research.md
docs/design/: v0.1-country-shaped-weather.md
docs/releases/: v0-demo.md  v0-deploy.md  v0-docs-review.md
scripts/: download_cuba_timeline_2021.sh  generate_asn_catalog.py  process_cuba.sh  process_cuba_timeline_2021.sh  refresh_data.sh  refresh_timeline.sh  validate_state.sh  validate_timeline.sh
src/: Cargo.toml  main.rs
web/app/: index.html  package-lock.json  package.json
web/app/public/: _headers
web/app/public/data/: collectors.json  manifest.json
web/app/src/: App.tsx  colors.ts  data.ts  dataLoader.ts  geo.ts  types.ts
web/app/src/components/: CollectorMap.tsx  CountryWeather.tsx  GeoMap.tsx  HilbertCanvas.tsx  MapStageGL.tsx  PathGraph.tsx  ReachMapStage.tsx  SidePanel.tsx  TimeScrubber.tsx
web/prototypes/deck-reachmap/: index.html  package-lock.json  package.json  vite.config.ts
web/prototypes/hilbert-cuba/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/prototypes/integrated/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+3362 files in other folders)
