[package]
name = "reachmap-pipeline"
version = "0.1.0"
edition = "2021"
description = "ReachMap data pipeline — LACNIC + RouteViews → static artifacts"

[[bin]]
name = "reachmap-pipeline"
path = "main.rs"

[dependencies]
bgpkit-parser = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
maxminddb = "0.28"
